--- a/src/PlanIt/GuestsBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/GuestsBundle/Resources/views/Page/index.html.twig
@@ -97,7 +97,7 @@
                                 </div>
                                 {% endif %}
                                 <div class="right pull-right col-md-2 col-sm-3" >
-                                    <div class="modify_type" onclick="showModalUpdateType({{type_guest.id}})">M</div>
+                                    <div class="modify_type" onclick="showModalUpdateType({{type_guest.id}})"></div>
 
                                     <div class="delete_type" onclick="showModalDeleteType({{type_guest.id}},'{{type_guest.label}}')"></div>                                    
 
