--- a/src/PlanIt/TodoBundle/Resources/public/css/general.scss
+++ b/src/PlanIt/TodoBundle/Resources/public/css/general.scss
@@ -18,6 +18,8 @@ $neutral: #d8d7d7;
 .modal-body {
 	input[type="submit"] {
 		background-color: $color;
+		&:hover {
+			background-color: darken($color, 5%);
+		}
 	}
 }
-
