--- a/src/PlanIt/PlaceBundle/Resources/views/Page/index.html.twig
+++ b/src/PlanIt/PlaceBundle/Resources/views/Page/index.html.twig
@@ -110,6 +110,6 @@
 {% block javascripts %}
     {{ parent() }} <!-- pour ne pas effacer les autres feuilles de style -->
     <script>accordeonPlace();</script>
-    <script>initializeMap();</script>
+    <script>initializeMap(1);</script>
     <script>places();</script>
 {% endblock %}
